edit-firstwebapp.html

--- a/firstapp.html
+++ b/firstapp.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>my first webapp</title> 
+        <strong>this is very important</strong>
     </head>
     <body>
       <h1>hello world</h1>  
