edit-firstwebapp.html

--- a/firstapp.html
+++ b/firstapp.html
@@ -4,6 +4,16 @@
         <meta charset="UTF-8">
         <title>my first webapp</title> 
         <strong>this is very important</strong>
+        <p>The rain tapped gently against the window, a soft rhythm 
+            that seemed to match the slow, steady thoughts drifting 
+            through her mind. Outside, the world was blurred by a veil 
+            of mist, the once-vibrant leaves of autumn now muted shades 
+            of gold and brown sat by the fireplace, the warmth curling
+             around her like a forgotten memory, and found herself lost in
+              the quiet. <strong>Time felt like it was standing still</strong>, as if the rain
+               had washed away the hurry of the world, leaving only the present
+                moment to linger.</p>
+
     </head>
     <body>
       <h1>hello world</h1>  
