edit-firstwebapp.html

--- a/firstapp.html
+++ b/firstapp.html
@@ -6,7 +6,7 @@
         <strong>this is very important</strong>
         <p>The rain tapped gently against the window, a soft rhythm 
             that seemed to match the slow, steady thoughts drifting 
-            through her mind. Outside, the world was blurred by a veil 
+            through her mind.<em>Outside</em> , the world was blurred by a veil 
             of mist, the once-vibrant leaves of autumn now muted shades 
             of gold and brown sat by the fireplace, the warmth curling
              around her like a forgotten memory, and found herself lost in
