edit-firstwebapp.html

--- a/firstapp.html
+++ b/firstapp.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>my first webapp</title> 
+        <!-- strong highlites the text,and em bends or emphesises the text -->
         <strong>this is very important</strong>
         <p>The rain tapped gently against the window, a soft rhythm 
             that seemed to match the slow, steady thoughts drifting 
@@ -13,7 +14,17 @@
               the quiet. <strong>Time felt like it was standing still</strong>, as if the rain
                had washed away the hurry of the world, leaving only the present
                 moment to linger.</p>
-
+                <!-- ul makes dotted list(ul means unordered list and ol means ordered list) and ol makes numbered list  -->
+        <ul><li>mahesh babu</li>
+            <li>vijay thalapathy</li>
+            <li>tom cruise</li>
+        </ul>
+        <ol><li>fahad faasil</li>
+            <li>rakshit shetty</li>
+            <li>surya</li>
+        </ol>
+        
+<!-- this is just a comment -->
     </head>
     <body>
       <h1>hello world</h1>  
