edit-firstimgandlink.html

--- a/firstapp.html
+++ b/firstapp.html
@@ -23,6 +23,8 @@
             <li>rakshit shetty</li>
             <li>surya</li>
         </ol>
+        <!-- using a we can add any link or image or video using herf link -->
+        <a href="https://assets.gqindia.com/photos/63885778265d4b599fe5d591/3:2/w_1619,h_1079,c_limit/South-Indian-earning-more-than-Bollywood-stars_03.jpg">about the top stars in india</a>
         
 <!-- this is just a comment -->
     </head>
