--- a/firstapp.html
+++ b/firstapp.html
@@ -25,7 +25,7 @@
         </ol>
         <!-- using a we can add any link or image or video using herf link,the target code will open the link in new tab and rel="noopener noreferrer" will help to prevent phishing attacks -->
         <a href="https://assets.gqindia.com/photos/63885778265d4b599fe5d591/3:2/w_1619,h_1079,c_limit/South-Indian-earning-more-than-Bollywood-stars_03.jpg" target="_blank" rel="noopener noreferrer">about the top stars in india</a>
-        <a href="aboutfirstlinkandimage.html">About</a>
+        <a href="about.html">About</a>
 <!-- this is just a comment -->
     </head>
     <body>
