just some images

--- a/firstapp.html
+++ b/firstapp.html
@@ -2,9 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>my first webapp</title> 
+        <title>top stars in india and their stardom</title> 
         <!-- strong highlites the text,and em bends or emphesises the text -->
-        <strong>this is very important</strong>
         <p>The rain tapped gently against the window, a soft rhythm 
             that seemed to match the slow, steady thoughts drifting 
             through her mind.<em>Outside</em> , the world was blurred by a veil 
@@ -26,7 +25,9 @@
         <!-- using a we can add any link or image or video using herf link,the target code will open the link in new tab and rel="noopener noreferrer" will help to prevent phishing attacks -->
         <a href="https://assets.gqindia.com/photos/63885778265d4b599fe5d591/3:2/w_1619,h_1079,c_limit/South-Indian-earning-more-than-Bollywood-stars_03.jpg" target="_blank" rel="noopener noreferrer">about the top stars in india</a>
         <a href="testing/about.html">About</a>
-<!-- this is just a comment -->
+        <!-- this is img tage and src tag to add images in a webpage -->
+        <h2>this is a list of most poppular stars in india in 2024</h2>
+        <img src="./images/stars.webp" alt="this is the list of top stars" height="310" width="310">
     </head>
     <body>
       <h1>hello world</h1>  
